added ClassController
